Through part 3 of the bootstrap tutorial

--- a/index.html
+++ b/index.html
@@ -6,9 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Example</title>
     <link href="bootstrap-3.4.1-dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="CustomStyles.css" rel="stylesheet">
 </head>
 <body>
     <h1 class="text-primary">Hello, Bootstrap!</h1>
+    
+    
+	<div class="container">
+		<div class="row">
+			<div class="col-md-2">
+				<div class="customDiv">Column 1</div>
+			</div>
+			<div class="col-md-4">
+				<div class="customDiv">Column 2</div>
+			</div>
+			<div class="col-md-4">
+				<div class="customDiv">Column 3</div>
+			</div>
+			<div class="col-md-2">
+				<div class="customDiv">Column 4</div>
+			</div>
+		</div>
+	</div>    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
     </script>
     <script src="bootstrap-3.4.1-dist/js/bootstrap.min.js"></script>
