--- a/index.html
+++ b/index.html
@@ -14,17 +14,22 @@
     
 	<div class="container">
 		<div class="row">
-			<div class="col-md-2">
-				<div class="customDiv">Column 1</div>
+			<div class="col-md-3">
+				<div class="customDiv">Column1</div>
+			</div>
+			<div class="col-md-3 col-md-offset-6">
+				<div class="customDiv">Column2</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-4">
+				<div class="customDiv">Column1</div>
 			</div>
 			<div class="col-md-4">
-				<div class="customDiv">Column 2</div>
+				<div class="customDiv">Column2</div>
 			</div>
 			<div class="col-md-4">
-				<div class="customDiv">Column 3</div>
-			</div>
-			<div class="col-md-2">
-				<div class="customDiv">Column 4</div>
+				<div class="customDiv">Column3</div>
 			</div>
 		</div>
 	</div>    
