--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
     
 	<div class="container">
 		<div class="row">
-			<div class="col-md-3">
-				<div class="customDiv">Column1</div>
-			</div>
-			<div class="col-md-3 col-md-offset-6">
-				<div class="customDiv">Column2</div>
+			<div class="col-md-4 col-md-offset-4">
+				<img src="images/BNan.jpg" 
+					class="img-responsive img-rounded">
 			</div>
 		</div>
+		<br>
 		<div class="row">
 			<div class="col-md-4">
 				<div class="customDiv">Column1</div>
